--- a/apuracana.css
+++ b/apuracana.css
@@ -1,3 +1,8 @@
+body{
+ background: #fcfbfb;
+}
+
+
 main {
 display: grid;
 grid-template-columns: repeat(1,1fr);
@@ -227,7 +232,18 @@ margin-bottom:30px;
   width:30px;
 }
 
-
+.apucarana-news .wrapper .anuncie-border{
+  border-top: 1px solid;
+    max-width: 855px;
+    border-bottom: 1px solid;
+    height: 60px;
+    /* vertical-align: middle; */
+    color: #e1e1e1;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    display: flex;
+    align-items: center;
+}
 
 .apucarana-news .wrapper .anuncie{
   background: #e1e1e1;
@@ -246,6 +262,7 @@ margin-bottom:30px;
   font-family: "lato-bold",sans-serif;
   font-style:normal;
   font-size: 16px;
+  margin-left: 3px;
 }
 .apucarana-news .wrapper .article-paragraphs{
   max-width: 855px;
@@ -267,8 +284,9 @@ margin-bottom:30px;
   font-family: "lato",sans-serif;
   font-weight: 700;
 }
-.apucarana-news .wrapper .article-paragraphs p  a{
+.apucarana-news .wrapper .article-paragraphs p a{
   color:#e61f22;
+  margin-left: 3px;
 }
 .apucarana-news .wrapper .article-paragraphs h2{
   font-size: 32px;
@@ -281,8 +299,17 @@ margin-bottom:30px;
     text-transform: uppercase;
     font-family: "lato-bold",sans-serif;
     font-weight: 700;
-   color: #a9a9a9 ;
-   font-size: 16px;
+    color: #a9a9a9;
+    font-size: 16px;
+    display: flex;
+    flex-wrap: nowrap;
+    align-content: center;
+    justify-content: space-between;
+    align-items: flex-end;
+    max-width: 850px;
+    border-bottom: 1px solid #e1e1e1;
+    padding-top: 10px;
+    padding-bottom: 30px;
   
   }
   .apucarana-news .wrapper .categorias-relacionadas a{
@@ -292,9 +319,9 @@ margin-bottom:30px;
     font-weight: 300;
     border: 1px solid #a9a9a9 ;
 
-    padding:5px;
+    padding:8px;
     border-radius:4px;
-    font-size: 14px;
+    font-size: 12px;
   }
   .apucarana-news .wrapper .categorias-relacionadas a:hover{
     background: #a9a9a9; 
@@ -304,11 +331,278 @@ margin-bottom:30px;
    color: #5b5b5b;
   }
 
+  .apucarana-news .wrapper .categorias-relacionadas .categorias-procure {
+    font-size: 14px;
+    text-transform: capitalize;
+  }
 
-  @media (max-width: 1150px)
-  {.tno-header .subpage-bg .subpage-wrapper{
+  .apucarana-news .wrapper .categorias-social {
+    font-size: 17px;
+    font-family: "lato-bold",sans-serif;
+    margin-top: 10px;
+    margin-left: 30px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+  }
+
+  .apucarana-news .wrapper .categorias-social  .social-categories img {
+    background-color:#e1e1e1;
+    border-radius:50%;
+    padding:8px;
+    height:35px;
+    width:36px;
+    margin-left: 10px;
+  }
+
+  .apucarana-news .wrapper .cat-socialinput {
+    font-size: 14px;
+    width: 260px;
+    height: 31px !important;
+    padding: 4px 6px !important;
+    font-family: "lato",sans-serif;
+    border: 1px solid #f1f1f1;
+    margin-left: 20px;
+    border-bottom-left-radius: 6px;
+    border-top-left-radius: 6px;
+  }
+  .apucarana-news .wrapper .cat-meuemail button{
+    color: #fff;
+    background: black;
+    text-transform: uppercase;
+    font-size: 12px;
+    padding: 2px 12px;
+    height: 31px;
+    border-top-right-radius: 6px;
+    border-bottom-right-radius: 6px;
+  }
+
+  .apucarana-news .wrapper .mais-materias{
+    font-size: 18px;
+    font-family: "lato-bold",sans-serif;
+    margin-top: 20px;
+    background: #e1e1e1;
+    max-width: 820px;
+    margin-left: 30px;
+  }
+  .apucarana-news .wrapper .mais-materias h2{
+    margin-top: 30px;
+    margin-bottom: 50px;
+  }
+  .apucarana-news .wrapper .uol-tmtitle h2{
+    border-bottom: 4px solid #a31e24;
+    width: 256px;
+    color: #a31e24;
+    margin-left: 30px;
+    font-family: 'lato-bold', sans-serif;
+    font-size: 18px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    text-transform: uppercase;
+  }
+  .apucarana-news .wrapper .uol-tmtitle{
+    border-bottom: 1px solid #e1e1e1;
+    max-width: 855px;
+  }
+
+  .apucarana-news .wrapper .meus-comentarios h4{
+    font-size: 18px;
+    font-family: "lato-bold",sans-serif;
+    margin-top: 30px;
+}
+.apucarana-news .wrapper .meus-comentarios span{
+  color: #e61f22;
+  font-size: 18px;
+    font-family: "lato-bold",sans-serif;
+   
+}
+
+.apucarana-news .wrapper small{
+  color: rgb(51, 51, 51);
+    max-width: 855px;
+    border: 1px solid #f1f1f1;
+    padding: 15px;
+    height: 82px;
+    border-radius: 5px;
+    font-size: 12px;
+    font-family: 'lato',sans-serif;
+    line-height: 1.42857;
+}
+
+.apucarana-news .wrapper .button-comentarios button {
+  text-transform: uppercase;
+    background: #454242;
+    color: #fff;
+    display: flex;
+    align-content: center;
+    align-items: center;
+    width: 855px;
+    margin-top: 10px;
+    justify-content: center;
+    font-family: 'lato', sans-serif;
+    border-radius: 5px;
+    padding: 15px;
+}
+
+.apucarana-news .wrapper .button-comentarios img{
+  height: 25px;
+    width: 25px;
+    vertical-align: middle;
+    position: relative;
+    right: 10px;
+}
+
+.apucarana-news .wrapper .trib-play{
+ 
+  line-height: 26px;
+    font-size: 22px;
+    font-family: "lato-bold",sans-serif;
+    background: #e61f22;
+    color: #fff;
+    border-radius: 5px;
+    width: max-content;
+    height: 40px;
+    padding: 10px;
+    text-transform: capitalize;
+    margin-top: 30px;
+}
+.apucarana-news .wrapper .trib-content{
+  display: flex;
+  flex-wrap: nowrap;
+  align-content: center;
+  justify-content: flex-start;
+  align-items: center;
+  border: 1px solid #f1f1f1;
+  border-radius: 6px;
+  max-width: 855px;
+  height: fit-content;
+  margin-bottom: 20px;
+  background: white;
+}
+.apucarana-news .wrapper .trib-content-text{
+  padding:30px;
+}
+.apucarana-news .wrapper .trib-content iframe{
+  border:none;
+  overflow:hidden;
+  font-size:10px;
+  border-top-left-radius: 6px;
+    border-bottom-left-radius: 6px;
+}
+.apucarana-news .wrapper .trib-content  .trib-content-text a{
+  text-decoration: none;
+  color: #333;
+  font-family: "lato",sans-serif;
+  font-size: 14px;
+
+}
+.apucarana-news .wrapper .trib-content  .trib-content-text a h3{
+  line-height: 26px;
+  font-size: 22px;
+  font-family: "lato-bold",sans-serif;
+}
+
+.apucarana-news .wrapper .trib-play-noticias{
+ 
+  line-height: 26px;
+    font-size: 22px;
+    font-family: "lato-bold",sans-serif;
+    background: #ae3335;
+    color: #fff;
+    border-radius: 5px;
+    width: max-content;
+    height: 40px;
+    padding: 10px;
+    text-transform: capitalize;
+    margin-top: 30px;
+}
+.apucarana-news .wrapper .trib-content-1{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
+  border: 1px solid #f1f1f1;
+  border-radius: 8px;
+  height: fit-content;
+  margin-bottom: 20px;
+  background: white;
+}
+.apucarana-news .wrapper .trib-content-1 div figure img{
+  border-top-left-radius: 6px;
+  border-bottom-left-radius: 6px;
+}
+.apucarana-news .wrapper .trib-content-1 .trib-social-a{
+  display: flex;
+    align-items: center;
+    margin-left: 20px;
+}
+
+
+.apucarana-news .wrapper .trib-content-1 .trib-subtitle{
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 12px;
+  font-family: "lato-bold",sans-serif;
+  color: #4682b4;
+}
+.apucarana-news .wrapper .trib-content-1 a img{
+  height: 15px;
+  width: 15px;
+  margin-left: 10px;
+  
+
+}
+
+.apucarana-news .wrapper .trib-content-1 .trib-social h2{
+  font-family: "lato-bold",sans-serif;
+  font-size: 18px;
+  line-height: 24px;
+  margin-top: 5px;
+  margin-left: 20px;
+}
+.apucarana-news .wrapper .trib-content-1 .trib-social a {
+  text-decoration: none;}
+.apucarana-news .wrapper .trib-content-1 .trib-social a i{
+  margin-left: 10px;
+}
+
+.apucarana-news .wrapper .trib-content-1 .trib-subtitle-1{
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 12px;
+  font-family: "lato-bold",sans-serif;
+  color: #cd150c;
+}
+
+.apucarana-news .wrapper .trib-content-1 .trib-subtitle-2{
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 12px;
+  font-family: "lato-bold",sans-serif;
+  color: #b3130b;
+}
+
+.apucarana-news .wrapper .button-noticias a button {
+  text-transform: uppercase;
+  font-size: 12px;
+  color: #fff ;
+  background: #222;
+  padding: 10px;
+  width: 100% ;
+  border-radius: 4px;
+  font-family:"lato", sans-serif;
+  margin-top: 10px;
+}
+
+
+
+
+  @media(max-width: 1150px){
+    
+    .tno-header .subpage-bg .subpage-wrapper{
   position: inherit;
-  }}
+  }
+}
 
   @media (max-width: 720px){
 
